--- a/map.css
+++ b/map.css
@@ -52,3 +52,31 @@
       align-items: stretch;
     }
   }
+  #mapid{
+    height: 480px;
+}
+
+#download {
+    position:absolute;
+    top:10px;
+    right:10px;
+    z-index:1000;
+}
+
+#cover {
+    display: none;
+    text-align: center;
+    padding-top: 200px;
+    background: #CCC;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+}
+
+#cover.active{
+    display: block;
+}
